<resources>
    <string name="app_name">DLEmeter (Karajan-Suite)</string>
    <string name="description"><![CDATA[
        <p>This app periodically samples the following data, for each CPU core: <i>Relative user and idle utilisation values, Absolute frequency, Relative frequency.</i></p>
        <p>Below, you can configure the storage location for the log files. It will be either the application folder on the internal storage, or on an external SD card.</p>
        <p>Once started, the application will run a <b>background service</b>, which will <i>continue running</i> if this configuration interface is closed. A <i>persistent notification</i> will be created, which can be used to open this view, or stop the service.</p>]]></string>
    <string name="store_path">Storage location</string>
    <string name="space_available">Available space</string>
    <string name="id_header">Device ID</string>
    <string name="permission_text">Phone state permissions are needed to uniquely identify the device. Otherwise, a per-session UUID will be created.</string>
    <string name="write_external_storage">External storage write permissions are needed if the application is supposed to write to folders other than the app data folder.</string>
    <string name="notification_title">DLEmeter (Karajan-Suite)</string>
    <string name="notification_text">Running in the background</string>
    <string name="notification_cancelled">The utilisation meter has been stopped</string>
    <string name="notification_subtext">Running in the background for %1$s</string>
    <string name="notification_channel">Notification channel for MeterService</string>
    <string name="service_not_running">Not running</string>
    <string name="service_running">Running</string>
    <string name="status_header">Service</string>
    <string name="manager_header">Service status</string>
    <string name="path_display">Full path</string>
</resources>
