<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="4pt"
    android:paddingRight="4pt"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvConfigHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Config &amp; status"
            android:textAppearance="@android:style/TextAppearance.Material.Menu" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvStoragePath"
                android:layout_width="@dimen/first_column"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/store_path" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingStart="0dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvPathDisplayHeader"
                android:layout_width="@dimen/first_column"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/path_display" />

            <TextView
                android:id="@+id/tvPathDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit ="marquee_forever"
                android:focusable="true"
                android:focusableInTouchMode="true" 
                android:scrollHorizontally="true"
                android:paddingStart="4pt"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSpaceAvailableHeader"
                android:layout_width="@dimen/first_column"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/space_available" />

            <TextView
                android:id="@+id/tvSpaceAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingStart="4pt"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIdHeader"
                android:layout_width="@dimen/first_column"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/id_header" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingStart="4pt"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvServiceStatusHeader"
                android:layout_width="@dimen/first_column"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/status_header" />

            <TextView
                android:id="@+id/tvServiceStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingStart="4pt"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvManagerStatusHeader"
                android:layout_width="@dimen/first_column"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/manager_header" />

            <TextView
                android:id="@+id/tvManagerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingStart="4pt"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvActionsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Actions"
            android:textAppearance="@android:style/TextAppearance.Material.Menu" />

        <Switch
            android:id="@+id/advancedOptionsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:switchPadding="10dp"
            android:text="Advanced"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="Start"
            android:text="Start"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/stopButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="Stop"
            android:text="Stop"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/forceButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="Force"
            android:text="Force stop"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/queryButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="Query"
            android:text="Query"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="Create"
            android:text="Create"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:visibility="gone" />

        <Button
            android:id="@+id/initButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="Init"
            android:text="Init"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:visibility="gone" />

        <Button
            android:id="@+id/resetButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="Reset"
            android:text="Reset"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:visibility="gone" />

        <Button
            android:id="@+id/destroyButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="Destroy"
            android:text="Destroy"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:visibility="gone" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

</LinearLayout>